--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,10 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": [
+        "*://*/*",
+        "http://192.168.100.98/*"
+      ],
       "js": ["content.js"]
     }
   ],
